k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yasha
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/cats-api"
        backend:
          service:
            name: cats-api
            port: 
              number: 80
